--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,5 @@
 *.vscode
 *.txt
+*.exe
 
-# Week - 1
-
-Week-1/Day-1/*.exe
-Week-1/Day-1/*.txt
-
-Week-1/Day-2/*.exe
-Week-1/Day-2/*.txt
-
-Week-1/Day-3/*.exe
-Week-1/Day-3/*.txt
-
-Week-1/Day-4/*.exe
-Week-1/Day-4/*.txt
-
-Week-1/Day-5/*.exe
-Week-1/Day-5/*.txt
-
-Week-1/Day-6/*.exe
-Week-1/Day-6/*.txt
-
-Week-1/Day-7/*.exe
-Week-1/Day-7/*.txt
 
